5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1595_1014.log
== TEST (2019-03-28 08:49:50) 
-- CODE:
x=float(input('qual foi o total de vendas?'))
print(x*3/10)
-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 08:49:54) 
-- CODE:
x=float(input('qual foi o total de vendas?'))
print(x*3/10)
-- EXECUTION TIME:
0.200205
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:00:09) 
-- CODE:
x=float(input('qual foi o total de vendas?'))
print(x*30%)
-- EXECUTION TIME:
0.149981
-- ERROR:
  File "/home/codebench/codes/1595/1014/main.py", line 2
    print(x*30%)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:00:11) 
-- CODE:
x=float(input('qual foi o total de vendas?'))
print(x*30%)
-- ERROR:
File "XXXX", line 2
    print(x*30%)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:00:25) 
-- CODE:
x=float(input('qual foi o total de vendas?'))
print(x*3/10)
-- EXECUTION TIME:
0.182195
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:01:27) 
-- CODE:
x=float(input('qual foi o total de vendas?'))
print(x*3/10)
-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:38:31) 
-- CODE:
x=float(input('qual foi o total de vendas?'))
print(x*3/10)
-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:38:42) 
-- CODE:
x=float(input('qual foi o total de vendas?'))
print(x*3/10)
-- EXECUTION TIME:
0.14678
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
